Update everything